<resources>
    <string name="app_name">logindemo</string>

    <string name="login">Login</string>
    <string name="email_id">EMAIL ID</string>
    <string name="password">PASSWORD</string>
    <string name="forget_password">Forget Password?</string>
    <string name="or">Or</string>
    <string name="dont_have_an_account">Don’t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="first_name">FIRST NAME</string>
    <string name="last_name">LAST NAME</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="first_name_must_be_not_empty">First name must be not empty</string>
    <string name="last_name_must_be_not_empty">Last name must be not empty</string>
    <string name="email_is_not_valid">Email is not valid</string>
</resources>